# zap-api

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  schema.patch
.github/distributor/: pr-template.md
config/: config.yml
config/2021-10-20-092423_fix_numeric_field_widths/: down.sql
config/2021-11-30-100004_migrate_contract/: down.sql  up.sql
migrations/2020-12-09-074357_create_swaps/: down.sql  up.sql
migrations/2021-01-05-041425_create_liquidity_changes/: down.sql  up.sql
migrations/2021-01-27-095548_create_distributions/: down.sql  up.sql
migrations/2021-02-23-120000_add_token_zil_amounts_to_liquidity_changes/: down.sql  up.sql
migrations/2021-02-23-121700_create_pool_txs/: down.sql  up.sql
migrations/2021-05-03-153738_create_pool_reserves/: down.sql  up.sql
migrations/2021-07-29-032006_create_claims/: down.sql  up.sql
migrations/2021-07-29-034409_create_backfill_completions/: down.sql  up.sql
migrations/2021-08-05-070734_add_distributor_address_to_distributions/: down.sql  up.sql
migrations/2021-09-01-171221_add_amount_to_claims/: down.sql  up.sql
migrations/2021-10-20-092423_fix_numeric_field_widths/: up.sql
migrations/2022-08-08-084501_create_block_sync/: down.sql  up.sql
migrations/2022-08-08-084501_create_chain_events/: down.sql  up.sql
src/: constants.rs  db.rs  distribution.rs  liquidity_pool.rs  main.rs  models.rs  pagination.rs  responses.rs  rpc.rs  schema.rs  utils.rs  worker.rs
