[package]
name = "zap-api"
version = "0.1.0"
authors = ["Ivan Poon <ravenxce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.10.0"
actix-cors = "0.5.4"
actix-web = "3"
bigdecimal = { version = "^0.1.2", features = ["serde"] }
chrono = { version = "^0.4.19", features = ["serde"] }
diesel = { version = "^1.4.5", features = ["postgres", "r2d2", "chrono", "numeric", "uuid"] }
diesel_migrations = "1.4.0"
dotenv = "^0.15.0"
env_logger = "^0.8.2"
num-bigint = "^0.2.6"
reqwest = { version = "^0.10.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "^0.6.5", features = ["serde"] }

[[bin]]
name = "zap-api"
test = false
bench = false
path = "src/main.rs"
